--- a/elastic-query-web-client-common/src/main/resources/templates/error.html
+++ b/elastic-query-web-client-common/src/main/resources/templates/error.html
@@ -1,6 +1,8 @@
 <div th:replace="header"></div>
 
 <div class="container">
+    <!--/*@thymesVar id="error_description" type="java.lang.String"*/-->
+    <!--/*@thymesVar id="error" type="java.lang.String"*/-->
     <h1>Query Client</h1>
     <div class="jumbotron">
         <h2>An error occurred</h2>
