--- a/elastic-query-web-client-common/src/main/resources/templates/header.html
+++ b/elastic-query-web-client-common/src/main/resources/templates/header.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Query Client</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -27,7 +26,7 @@
 
         <div class="row">
             <div class="col-12" th:if="${#authorization.expression('isAuthenticated()')}">
-                <p class="text-light bg-dark float-right">Welcome, <span th:text="${#authentication.principal.username}"/>!</p>
+                <p class="text-light bg-dark float-right">Welcome, <span th:text="${#authentication.principal.username}"></span>!</p>
             </div>
             <form class="col-12" method="post" th:action="@{/logout}" th:if="${#authorization.expression('isAuthenticated()')}">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
