--- a/elastic-query-web-client-common/src/main/resources/templates/header.html
+++ b/elastic-query-web-client-common/src/main/resources/templates/header.html
@@ -26,7 +26,7 @@
 
         <div class="row">
             <div class="col-12" th:if="${#authorization.expression('isAuthenticated()')}">
-                <p class="text-light bg-dark float-right">Welcome, <span th:text="${#authentication.principal.username}"></span>!</p>
+                <p class="text-light bg-dark float-right">Welcome, <span th:text="${#authentication.principal.fullName}"></span>!</p>
             </div>
             <form class="col-12" method="post" th:action="@{/logout}" th:if="${#authorization.expression('isAuthenticated()')}">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
