--- a/elastic-query-web-client-common/src/main/resources/templates/index.html
+++ b/elastic-query-web-client-common/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     </div>
 
     <div th:if="${#authorization.expression('isAuthenticated()')}">
-        <p>Hello <span th:text="${#authentication.principal.username}"></span><a th:href="@{/home}"> Let's get start searching!</a></p>
+        <p>Hello <span th:text="${#authentication.principal.fullName}"></span><a th:href="@{/home}"> Let's get start searching!</a></p>
     </div>
 </div>
 
